2016-10-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* smtp.el (smtp-send-buffer, smtp-send-buffer-by-myself): Call
	kill-buffer with nil.  Only Emacs 23 and later support omitting an
	argument for kill-buffer.  Reported By Tatsuya Kinoshita
	<tats@vega.ocn.ne.jp>.  Cf. [wl:14662]

2016-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-decode.el (eword-analyze-encoded-word): Fix the check for
	non-atom special chars to permit space chars.

2016-08-14  Erik Hetzner  <egh@e6h.org>

	* mime-en.texi: Add dir entry

	* mime-ja.texi: Likewise

2016-08-13  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-decode.el (eword-analyze-encoded-word): Quote decoded word
	when it contains non-atom special chars and not quoted.
	Cf. https://github.com/wanderlust/wanderlust/issues/126

2016-03-12  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mel.el (mel-prompt-for-encoding): New function.
	(mime-encode-region, mime-decode-region)
	(mime-insert-encoded-file, mime-write-decoded-region): Use it.

2015-12-13  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* smtp.el (smtp-send-buffer, smtp-send-buffer-by-myself): Kill
	trace buffer after sending when smtp-debug is nil and network
	stream is disconnected.  Suggested by Herbert J. Skuhra
	<herbert@oslo.ath.cx>

2015-07-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* smtp.el (smtp-primitive-auth): Fix the case that server returns
	human readable string for AUTH command.

2015-05-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* smtp.el (smtp-make-fqdn): Show more informative message for
	invalid FQDN.
	Cf. https://github.com/wanderlust/wanderlust/issues/96

2015-05-02  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-encode.el: Require poem.el for non-mule.

2015-04-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-parse.el (mime-default-ccl-lexical-analyzer)
	(mime-ccl-lexical-analyzer): Fix for CCL unusable environments.

	* std11.el (std11-default-ccl-lexical-analyzer)
	(std11-ccl-lexical-analyzer): Likeswise.

2015-04-27  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
